// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SandboxPopUp should match snapshot with default 1`] = `
<div>
  <ToastMessage
    message="Data in the dev portal APIs is sandbox and is regularly refreshed. You should not use these feeds for production apps, they are for development purposes only."
    onCloseToast={[Function]}
    variant="info"
    visible={false}
  />
</div>
`;

exports[`SandboxPopUp should match snapshot with passed props 1`] = `
<div>
  <ToastMessage
    message="mess"
    onCloseToast={[Function]}
    variant="info"
    visible={false}
  />
</div>
`;
